Changed Link in Index File
Changed Goo-Rooster from Construction to Goo-Beta

--- a/Website/index.html
+++ b/Website/index.html
@@ -64,7 +64,7 @@ Go2
 	<a href="index-goo.html"><img src="archives.jpg" width="175" height="100"></a>
 	</td>
 	<td style="width: 20%">
-	<a href="construction.html"><img src="goo_rooster.jpg" width="180" height="100"></a>
+	<a href="goo-beta.html"><img src="goo_rooster.jpg" width="180" height="100"></a>
 	</td>
  </tr>
 </table>
