Changed Goo-Beta Layout
Now more graphically appealing.

--- a/Website/goo-beta.html
+++ b/Website/goo-beta.html
@@ -16,11 +16,21 @@ body{
 	margin-right:25px;
 	margin-top:5px;
 }
-.total{
-	margin-left:200px;
+.extra{
+	padding:25px;
+	margin-left:200px; 
 	margin-right:200px;
 
 }
+p:first-letter
+{
+font-size:200%;
+}
+
+A:link {color:#11dd11; text-decoration:none;}
+A:visited {color:#11dd11;}
+A:active {color:blue;}
+A:hover {color:#00BB00;}
 </style>
 </head>
 <body bgcolor="404040">
@@ -30,16 +40,10 @@ body{
 	<tr>
 		<td colspan="5" width="60%">
 		<span>
-		<img src="goo-icon.png" width="60%" height="60%">
-		</span>
-		</td>
-		<td width="40%">
-		<span align="right">
-		<img src="goo-git.jpg" width="30%" height="30%">
+		<img src="goo-icon.png" width="30%" height="30%">
 		</span>
 		</td>
 	</tr>
-
 </table>
 <hr>
 <p>
@@ -56,11 +60,76 @@ body{
 
 	<a href="construction.html"><img src="goo_rooster.jpg" width="180" height="100"></a>
 </center>
-<p>
-<font style="Georgia" color="white" size="6">W</font>
-<font style="Georgia" color="white">elcome to the Beta version of Goo, RoosterGoo.
+<p class="extra">
+<font style="Georgia" color="white">Welcome to the Beta version of Goo, RoosterGoo. Goo will eventually be centred around tutorials and lessons on programming, Unix, micro-controllers, and more! Currently this is the main website created by myself. If you have any questions or comments about the site, feel free to email me at: <a href="mailto:mjb@balogh-family.com">mjb@balogh-family.com</a>. I have a github account where you can find a <a href="https://github.com/programming-master/goo">repository</a> for this website. I have been working with blender, as you can see with the new logo in the upper right-hand corner. Look forward for some 3D renderings in the future. I have also begun to work on some graphic designs for different sections of the webpage.
+<center>
+<img src="goo-git.jpg" width="25%" height="25%">
+</center>
+<p class="extra">
+If you are interested in seeing the programming section of this website, take a look <a href="./programming/main.html">here</a>. Just take in mind that I have not had much time to work on it. The only language I spent any considerable time on was C.
+
 </font>
-</td>
+<hr>
+
+<table>
+	<tr>
+		<!-- <td width="5%">
+		<span align="right">
+		<img src="goo-git.jpg" width="100" height="95">
+		</span>
+		</td> -->
+		<td width="70%">
+		<!-- <font color="red">
+		Copyright 2014
+		<font color="blue">
+		Copyright 2014
+		<font color="brown">
+		Copyright 2014
+		<font color="orange">
+		Copyright 2014
+		<font color="black">
+		Copyright 2014
+		<font color="white">
+		Copyright 2014
+		<font color="green">
+		Copyright 2014
+		<font color="yellow">
+		Copyright 2014
+		<font color="pink">
+		Copyright 2014
+		<font color="purple">
+		Copyright 2014
+		<font color="lightblue">
+		Copyright 2014 -->
+		<font color="444444">
+		Copyright 2014
+		<font color="555555">
+		Copyright 2014
+		<font color="666666">
+		Copyright 2014
+		<font color="777777">
+		Copyright 2014
+		<font color="888888">
+		Copyright 2014
+		<font color="999999">
+		Copyright 2014
+		<font color="aaaaaa">
+		Copyright 2014
+		<font color="bbbbbb">
+		Copyright 2014
+		<font color="cccccc">
+		Copyright 2014
+		<font color="dddddd">
+		Copyright 2014
+		<font color="eeeeee">
+		Copyright 2014
+		<font color="ffffff">
+		Copyright 2014
+		</font>
+		<br>
+		</td>
+		
+	</tr>
 </table>
 </body>
 <html>
