Fixed rooster bug.
regular.html now directs to http://goo.centreweb.net/ instead of
index.html.

--- a/Website/regular.html
+++ b/Website/regular.html
@@ -38,7 +38,7 @@
 
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="http://goo.centreweb.net">Home</a></li>
           <li><a href="goo$.html">Goo$</a></li>
 	  <li><a href="peabody.html">Peabody</a></li>
 	  <li><a href="linux.html">Linux</a></li>
